# talking-python

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  _packages.txt  docker-compose.yml  noxfile.py  pyproject.toml  requirements-streamlit.txt  requirements.txt
.github/workflows/: download_transcripts.yml  embed.yml
app/: README.md  app.py  embeddings.py  pyproject.toml  utils.py
app/.streamlit/: config.toml
app/components/: faq.py  sidebar.py
app/tests/: test_embeddings.py
chroma/: chroma-collections.parquet  chroma-embeddings.parquet
chroma/index/: id_to_uuid_e08d6b8a-362d-4c5c-8bb0-150d73b15908.pkl  index_metadata_e08d6b8a-362d-4c5c-8bb0-150d73b15908.pkl  uuid_to_id_e08d6b8a-362d-4c5c-8bb0-150d73b15908.pkl
flow_results/: .embedded_files.txt  file_lengths.json  transcript_filenames.txt
flow_results/cleaned_transcripts/: 000_clean.txt  001_clean.txt  002_clean.txt  003_clean.txt  004_clean.txt  005_clean.txt  006_clean.txt  007_clean.txt  008_clean.txt  009_clean.txt  010_clean.txt  011_clean.txt  012_clean.txt  013_clean.txt  014_clean.txt  015_clean.txt  016_clean.txt  017_clean.txt  018_clean.txt  019_clean.txt  020_clean.txt  021_clean.txt  022_clean.txt  023_clean.txt  024_clean.txt  025_clean.txt  026_clean.txt  027_clean.txt  028_clean.txt  029_clean.txt  030_clean.txt  031_clean.txt  032_clean.txt  033_clean.txt  034_clean.txt  035_clean.txt  036_clean.txt  037_clean.txt  038_clean.txt  039_clean.txt  (+401 more)
flow_results/test_summaries/: 003_clean_MingZhong_DialogLED-base-16384.txt  003_clean_philschmid_bart-large-cnn-samsum(100-142).txt  003_clean_philschmid_bart-large-cnn-samsum.txt  003_clean_philschmid_flan-t5-base-samsum(100-200).txt  003_clean_philschmid_flan-t5-base-samsum.txt  182_clean_MingZhong_DialogLED-base-16384.txt  182_clean_philschmid_bart-large-cnn-samsum(100-142).txt  182_clean_philschmid_bart-large-cnn-samsum.txt  182_clean_philschmid_flan-t5-base-samsum(100-200).txt  182_clean_philschmid_flan-t5-base-samsum.txt  376-pydantic-2-the-plan_clean_MingZhong_DialogLED-base-16384.txt  376-pydantic-2-the-plan_clean_philschmid_bart-large-cnn-samsum(100-142).txt  376-pydantic-2-the-plan_clean_philschmid_bart-large-cnn-samsum.txt  376-pydantic-2-the-plan_clean_philschmid_flan-t5-base-samsum.txt  399-monorepos_clean_MingZhong_DialogLED-base-16384.txt  399-monorepos_clean_philschmid_bart-large-cnn-samsum(100-142).txt  399-monorepos_clean_philschmid_bart-large-cnn-samsum.txt  399-monorepos_clean_philschmid_flan-t5-base-samsum(100-200).txt  399-monorepos_clean_philschmid_flan-t5-base-samsum.txt
flows/: _test_summary.py  clean_transcripts.py  embed.py  summarize.py  test_summary.py
requirements/: base_flow.in  base_flow.txt  dev.in  dev.txt  req_embed.in  requirements.txt  requirements_app.txt  requirements_clean_transcript.in  requirements_embed.in  requirements_embed.txt
src/: LICENSE  pyproject.toml
src/talking_python/: chroma.py  clean_transcripts.py  db.py  describe.py  filenames.py  models.py  release.py  settings.py  utilities.py
src/talking_python/flows/: clean_transcripts.py
src/tests/: test_release.py
streamlit-dir/app/: talking_python_app-0.0.0-py3-none-any.whl
streamlit-dir/src/: talking_python-0.0.0-py3-none-any.whl
talking_python/: clean_transcripts.py  settings.py
