[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talking-python"
description = "Exploration of talk python to me podcast transcripts"
authors = [
    {name = "Agustín Piqueres", email = "agustin.piqueres@gmail.com"}
]
dependencies = [
    "prefect~=2.10.5",
    "spacy~=3.5.2",
]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.1.0",
    "nox>=2022.11.21",
]
dev = [
    "black",
    "mypy",
    "ruff"
]

[project.urls]
Source = "https://github.com/plaguss/talking-python"

[tool.hatch.version]
path = "src/talking_python/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/talking_python"]

[tool.pytest]
addopts = [
    "--cov=src/talking_python",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.ruff]
# Enable Pyflakes and pycodestyle rules.
select = ["E", "F", "I001"]
line-length = 88  # Same as black
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google" 
